<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CollectAndroidViewsActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_authorization_token_layout"
        style="@style/Theme.PruebasNoCompose"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        app:fieldName="number"
        android:hint="@string/authorization_token"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_save_auth_token"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_authorization_token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_save_auth_token"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_authorization_token_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_authorization_token_layout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_clear_auth_token"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:visibility="gone"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_authorization_token_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_authorization_token_layout" />

    <com.aptokenizer.tokenizer.views.system.TREditText
        android:id="@+id/text_number_card_layout"
        style="@style/Theme.PruebasNoCompose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/tr_edit_text_bg"
        android:inputType="number"
        android:paddingHorizontal="4dp"
        android:paddingVertical="6dp"
        android:textColor="@color/white"
        app:enabled="false"
        app:fieldName="number"
        app:hint="@string/card_digits_hint"
        app:hintTextColor="@color/text_muted"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_authorization_token_layout"
        app:layout_constraintVertical_bias="0.0"
        app:textColor="@color/white"
        app:textSize="16sp" />

    <com.aptokenizer.tokenizer.views.system.TREditText
        android:id="@+id/text_number_pin_layout"
        style="@style/Theme.PruebasNoCompose"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/tr_edit_text_bg"
        android:inputType="numberPassword"
        android:paddingHorizontal="4dp"
        android:paddingVertical="6dp"
        android:textColor="@color/white"
        app:enabled="false"
        app:fieldName="pin"
        app:hint="@string/pin_digits_hint"
        app:hintTextColor="@color/text_muted"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_show_pin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_number_card_layout"
        app:layout_constraintVertical_bias="0.0"
        app:textColor="@color/white"
        app:textSize="16sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_show_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/text_view_show_pin"
        app:layout_constraintBottom_toBottomOf="@+id/text_number_pin_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_number_pin_layout"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_tokenize_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tokenize_data_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_number_pin_layout"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/card_token_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_tokenize_data"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/pin_token_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_token_text"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/errors"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pin_token_text"
        app:layout_constraintVertical_bias="0.0"
        app:textColor="@color/red" />

</androidx.constraintlayout.widget.ConstraintLayout>